--- a/.github/workflows/test-dmcopilot.yml
+++ b/.github/workflows/test-dmcopilot.yml
@@ -1,11 +1,11 @@
-name: test-dmcopilotbackend
+name: test-dmcopilot
 
 on:
   workflow_call:
 
 jobs:
-  build-dmcopilotbackend:
-    name: Test DMCopilot.Shared
+  build-dmcopilot:
+    name: Test DMCopilot.Entities
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,20 +16,20 @@ jobs:
         with:
           dotnet-version: 7
 
-      - name: Run unit tests on DMCopilot.Shared
+      - name: Run unit tests on DMCopilot.Entities
         run: |
           dotnet test --configuration Release --logger trx
-        working-directory: ./src/DMCopilot/DMCopilot.Shared.Test/
+        working-directory: ./src/DMCopilot/DMCopilot.Entities.Test/
 
       - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
-          name: DMCopilot.Shared.Test
-          path: ./src/DMCopilot/DMCopilot.Shared.Test/TestResults/*.trx
+          name: DMCopilot.Entities.Test
+          path: ./src/DMCopilot/DMCopilot.Entities.Test/TestResults/*.trx
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
             files: |
-              ./src/DMCopilot/DMCopilot.Shared.Test/TestResults/*.trx
+              ./src/DMCopilot/DMCopilot.Entities.Test/TestResults/*.trx
