--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -6,12 +6,16 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "CosmosDb": {
-        "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
-        "DatabaseName": "dmcopilot"
+    "DataStore": {
+        "Type": "CosmosDb",
+        "CosmosDb": {
+            "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+            "DatabaseName": "dmcopilot"
+        }
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
+        "Type": "AzureOpenAI",
         "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
