--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -1,11 +1,14 @@
 {
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "fdpo.onmicrosoft.com",
-        "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
-        "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
-        "CallbackPath": "/signin-oidc"
-    },
+    "Authorization": {
+        "Type": "AzureAd",
+        "AzureAd": {
+            "Instance": "https://login.microsoftonline.com/",
+            "Domain": "fdpo.onmicrosoft.com",
+            "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
+            "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
+            "CallbackPath": "/signin-oidc"
+        },
+    }
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -18,12 +21,16 @@
         "Scopes": "user.read"
     },
     "ConnectionStrings": {},
-    "CosmosDb": {
-        "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
-        "DatabaseName": "dmcopilot"
+    "DataStore": {
+        "Type": "CosmosDb",
+        "CosmosDb": {
+            "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+            "DatabaseName": "dmcopilot"
+        }
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
+        "Type": "AzureOpenAI",
         "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
