--- a/src/DMCopilot/DMCopilot.WebApi/DMCopilot.WebApi.csproj
+++ b/src/DMCopilot/DMCopilot.WebApi/DMCopilot.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,9 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DMCopilot.Data\DMCopilot.Data.csproj" />
+    <ProjectReference Include="..\DMCopilot.Entities\DMCopilot.Entities.csproj" />
+    <ProjectReference Include="..\DMCopilot.Shared\DMCopilot.Shared.csproj" />
   </ItemGroup>
 
 </Project>
