More work cleaning up code

--- a/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
+++ b/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DMCopilot.Data\DMCopilot.Data.csproj" />
-    <ProjectReference Include="..\DMCopilot.Shared\DMCopilot.Shared.csproj" />
+    <ProjectReference Include="..\DMCopilot.Services\DMCopilot.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
