More work on refactoring

--- a/src/DMCopilot/DMCopilot.WebApi/DMCopilot.WebApi.csproj
+++ b/src/DMCopilot/DMCopilot.WebApi/DMCopilot.WebApi.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\DMCopilot.Services\DMCopilot.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
