--- a/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
+++ b/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
@@ -24,15 +24,16 @@
     <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.9" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.0" />
-    <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.13.0" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.13.0" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="0.17.230718.1-preview" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.1" />
+    <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.13.1" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.13.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="0.18.230725.3-preview" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DMCopilot.Data\DMCopilot.Data.csproj" />
+    <ProjectReference Include="..\DMCopilot.Entities\DMCopilot.Entities.csproj" />
     <ProjectReference Include="..\DMCopilot.Services\DMCopilot.Services.csproj" />
   </ItemGroup>
 
