--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -42,5 +42,8 @@
     },
     "AppConfiguration": {
         "Endpoint": "https://dsr-dmcopilot-appconfig.azconfig.io"
+    },
+    "ApplicationInsights": {
+        "Test": "Development"
     }
 }
