--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -20,7 +20,6 @@
         "BaseUrl": "https://graph.microsoft.com/v1.0",
         "Scopes": "user.read"
     },
-    "ConnectionStrings": {},
     "DataStore": {
         "Type": "CosmosDb",
         "CosmosDb": {
@@ -57,5 +56,8 @@
     },
     "AppConfiguration": {
         "Endpoint": "https://dsr-dmcopilot-appconfig.azconfig.io"
+    },
+    "ApplicationInsights": {
+        "Test": "Production"
     }
 }
