Convert Worlds to Universes

--- a/src/GMCopilot/GMCopilot.Backend/GMCopilot.Backend.csproj
+++ b/src/GMCopilot/GMCopilot.Backend/GMCopilot.Backend.csproj
@@ -41,6 +41,9 @@
     <None Update="Plugins\Character\CreateCharacter\skprompt.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Plugins\Universe\CreateUniverse\skprompt.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Plugins\World\CreateWorld\skprompt.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
