--- a/src/GMCopilot/GMCopilot.Backend/GMCopilot.Backend.csproj
+++ b/src/GMCopilot/GMCopilot.Backend/GMCopilot.Backend.csproj
@@ -13,10 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.0" />
-    <PackageReference Include="Blazorise" Version="1.2.5" />
-    <PackageReference Include="Blazorise.Bootstrap" Version="1.2.5" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.5" />
-    <PackageReference Include="Blazorise.LoadingIndicator" Version="1.2.5" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.10" NoWarn="NU1605" />
@@ -29,6 +25,7 @@
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.13.2" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="0.19.230804.2-preview" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
   </ItemGroup>
 
   <ItemGroup>
