--- a/src/GMCopilot/GMCopilot.Services/GMCopilot.Services.csproj
+++ b/src/GMCopilot/GMCopilot.Services/GMCopilot.Services.csproj
@@ -7,20 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.0" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.21.0" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.OpenAI" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Memory.AzureCognitiveSearch" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Planning.ActionPlanner" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Planning.SequentialPlanner" Version="0.19.230804.2-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Skills.Document" Version="0.19.230804.2-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.0.0-beta6" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.OpenAI" Version="1.0.0-beta6" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Memory.AzureCognitiveSearch" Version="1.0.0-beta6" />
+    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.0.0-beta6" />
+    <PackageReference Include="Microsoft.SemanticKernel.Planning.ActionPlanner" Version="0.24.230918.1-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel.Planning.SequentialPlanner" Version="0.24.230918.1-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel.Skills.Document" Version="0.24.230918.1-preview" />
   </ItemGroup>
 
   <ItemGroup>
