Added Data support

--- a/src/GMCopilot/GMCopilot/GMCopilot/appsettings.Development.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "DataStore": {
+        "Type": "CosmosDb",
+        "CosmosDb": {
+            "EndpointUri": "https://dsr-gmcopilot-cdb.documents.azure.com:443/"
+        }
     }
-  }
 }
