--- a/src/GMCopilot/GMCopilot/GMCopilot/GMCopilot.csproj
+++ b/src/GMCopilot/GMCopilot/GMCopilot/GMCopilot.csproj
@@ -4,13 +4,22 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>649d855c-54f3-455a-b2f4-d794a91388aa</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.37.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
+    <ProjectReference Include="..\..\GMCopilot.Data\GMCopilot.Data.csproj" />
+    <ProjectReference Include="..\..\GMCopilot.Entities\GMCopilot.Entities.csproj" />
     <ProjectReference Include="..\..\GMCopilot.ServiceDefaults\GMCopilot.ServiceDefaults.csproj" />
     <ProjectReference Include="..\GMCopilot.Client\GMCopilot.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
