--- a/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "DataStore": {
+        "Type": "CosmosDb",
+        "CosmosDb": {
+            "EndpointUri": "https://dsr-gmcopilot-cdb.documents.azure.com:443/"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
