--- a/src/GMCopilot/GMCopilot/GMCopilot/GMCopilot.csproj
+++ b/src/GMCopilot/GMCopilot/GMCopilot/GMCopilot.csproj
@@ -5,11 +5,14 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>649d855c-54f3-455a-b2f4-d794a91388aa</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.37.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="[1.19.6-Preview.1, 1.19.6]" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
     <ProjectReference Include="..\..\GMCopilot.Data\GMCopilot.Data.csproj" />
     <ProjectReference Include="..\..\GMCopilot.Entities\GMCopilot.Entities.csproj" />
