--- a/.github/workflows/build-gmcopilot.yml
+++ b/.github/workflows/build-gmcopilot.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-gmcopilot:
-    name: Build GMC backend
+    name: Build GMC
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,15 +19,15 @@ jobs:
       - name: Build publishable GMC
         run: |
           dotnet publish --configuration Release
-        working-directory: ./src/GMCopilot/GMCopilot.Backend/
+        working-directory: ./src/GMCopilot/
 
       - name: Zip publishable GMC
         run: |
           zip -r gmcopilot.zip .
-        working-directory: ./src/GMCopilot/GMCopilot/bin/Release/net8.0/publish
+        working-directory: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish
 
       - name: Upload GMC as workflow artifact
         uses: actions/upload-artifact@v3
         with:
           name: gmcopilot
-          path: ./src/GMCopilot/GMCopilot/bin/Release/net8.0/publish/gmcopilot.zip
+          path: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish/gmcopilot.zip
