Update build scripts and add container registry output and build and publish a docker image

--- a/.github/workflows/build-armtemplate.yml
+++ b/.github/workflows/build-armtemplate.yml
@@ -7,8 +7,10 @@ jobs:
   lint-bicep:
     name: Lint Bicep
     runs-on: ubuntu-latest
+    
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Install Bicep
       run: | 
