--- a/.github/workflows/build-gmcopilot-container.yml
+++ b/.github/workflows/build-gmcopilot-container.yml
@@ -34,4 +34,4 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
 
       - name: Build and push image to ACR      
-        run: az acr build --image gmcopilot:${{ github.sha }} --registry ${{ inputs.CONTAINER_REGISTRY_NAME }} -g ${{ inputs.RESOURCE_GROUP_NAME }} --target base ./src/GMCopilot/GMCopilot/GMCopilot
+        run: az acr build --image gmcopilot/gmcopilot:${{ github.sha }} --registry ${{ inputs.CONTAINER_REGISTRY_NAME }} -g ${{ inputs.RESOURCE_GROUP_NAME }} --target base ./src/GMCopilot/GMCopilot/GMCopilot
