Add generate-build-version workflow

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -6,28 +6,32 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  BUILD_VERSION: ${{ startsWith(github.ref, 'refs/tags/') && github.ref || github.sha }}
+    
 permissions:
   id-token: write
   contents: read
   checks: write
   pull-requests: write
 
-env:
-  BUILD_VERSION: ${{ startsWith(github.ref, 'refs/tags/') && github.ref || github.sha }}
-
 jobs:
   # We are building an ARM template rather than submitting the Bicep directly
   # because this allows us to use the latest version of the Bicep compiler.
+
+  generate-build-version:
+    uses: ./.github/workflows/generate-build-version.yml
 
   build-armtemplate:
     uses: ./.github/workflows/build-armtemplate.yml
 
   validate-infrastructure:
     needs:
+      - generate-build-version
       - build-armtemplate
     uses: ./.github/workflows/validate-infrastructure.yml
     with:
-      BUILD_VERSION: ${{ env.BUILD_VERSION }}
+      BUILD_VERSION: ${{ needs.build-armtemplate.outputs.BUILD_VERSION }}
       LOCATION: ${{ vars.LOCATION }}
       BASE_RESOURCE_NAME: ${{ vars.BASE_RESOURCE_NAME }}
       RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_NAME }}
@@ -44,10 +48,11 @@ jobs:
   
   deploy-infrastructure:
     needs:
+      - generate-build-version
       - validate-infrastructure
     uses: ./.github/workflows/deploy-infrastructure.yml
     with:
-      BUILD_VERSION: ${{ env.BUILD_VERSION }}
+      BUILD_VERSION: ${{ needs.generate-build-version.outputs.BUILD_VERSION }}
       LOCATION: ${{ vars.LOCATION }}
       BASE_RESOURCE_NAME: ${{ vars.BASE_RESOURCE_NAME }}
       RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_NAME }}
@@ -72,10 +77,11 @@ jobs:
   
   build-gmcopilot-container:
     needs:
+      - generate-build-version
       - deploy-infrastructure
     uses: ./.github/workflows/build-gmcopilot-container.yml
     with:
-      BUILD_VERSION: ${{ env.BUILD_VERSION }}
+      BUILD_VERSION: ${{ needs.generate-build-version.outputs.BUILD_VERSION }}
       RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_NAME }}
       CONTAINER_REGISTRY_NAME: ${{ needs.deploy-infrastructure.outputs.containerRegistryName }}
     secrets:
