--- a/.github/workflows/set-build-variables.yml
+++ b/.github/workflows/set-build-variables.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Generate build version
         id: generate-build-version
         run: |
-          echo "build_version=${{ startsWith(github.ref, 'refs/tags/') && github.ref || github.sha }}" >> "$GITHUB_ENV"
+          echo "build_version=${{ startsWith(github.ref, 'refs/tags/') && github.ref || github.sha }}" >> "$GITHUB_OUTPUT"
