Add support for deploying tagged versions

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -4,8 +4,11 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+    tags:
+      - v*
 
+  workflow_dispatch:
+  
 env:
   BUILD_VERSION: ${{ startsWith(github.ref, 'refs/tags/') && github.ref || github.sha }}
     
