--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,8 +13,8 @@ jobs:
   # We are building an ARM template rather than submitting the Bicep directly
   # because this allows us to use the latest version of the Bicep compiler.
 
-  build-armtemplate:
-    uses: ./.github/workflows/build-armtemplate.yml
+  build-armtemplates:
+    uses: ./.github/workflows/build-armtemplates.yml
 
   test-gmcopilot:
     uses: ./.github/workflows/test-gmcopilot.yml
