--- a/.github/workflows/validate-application-infrastructure.yml
+++ b/.github/workflows/validate-application-infrastructure.yml
@@ -71,7 +71,7 @@ jobs:
           failOnStdErr: false
           resourceGroupName: ${{ inputs.RESOURCE_GROUP_NAME }}
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          template: ./armtemplate/main.json
+          template: ./applicationarmtemplate/application.json
           region: ${{ inputs.LOCATION }}
           scope: subscription
           parameters: >
